--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
-patreon: # https://www.patreon.com/Shaytris
-liberapay: # https://en.liberapay.com/Shaytris/
+patreon: # Shaytris
+liberapay: # Shaytris
